# practical-python

./: .gitignore  .replit  LICENSE.md  README.md  _config.yml  mean_var_std.py  my_notes.md  overview.md  pyproject.toml  replit.nix  sample.txt
Notes/: 00_Setup.md  Contents.md  InstructorNotes.md
Notes/01_Introduction/: 00_Overview.md  01_Python.md  02_Hello_world.md  03_Numbers.md  04_Strings.md  05_Lists.md  06_Files.md  07_Functions.md
Notes/02_Working_with_data/: 00_Overview.md  01_Datatypes.md  02_Containers.md  03_Formatting.md  04_Sequences.md  05_Collections.md  06_List_comprehension.md  07_Objects.md
Notes/03_Program_organization/: 00_Overview.md  01_Script.md  02_More_functions.md  03_Error_checking.md  04_Modules.md  05_Main_module.md  06_Design_discussion.md
Notes/04_Classes_objects/: 00_Overview.md  (+4 more)
Solutions/: README.md
Test_Programs/: sears.py  strings.py
Work/: .fileparse.py.swp  .test_stock.py.swp  1_6_file_management.py  1_7_functions.py  ASampleProgram.py  Chapter1.ipynb  Chto-nibudtam.py  Container.py  Data.py  Error.py  Files.py  Functions.py  Lists.py  Numbers.py  Numbers.py.save  README.md  String.py  bounce.py  bounce_test.py  bouncing pall.py  bouncy.py  collection.py  collection.py.save  collections.py  containers.py  copy.py  currency.py  currency_test.py  dowstocks.py  ex1.1.py  fileForTestings  fileparse.py  fileparse_test.py  follow.py  foo.txt  function.py  hello.py  lesson_1_4_strings.py  lesson_1_5_lists.py  list_comprehension.py  (+36 more)
_layouts/: default.html
porty-app/: manifest.in  portfolio.csv  print-report.py  setup.py
(+108 files in other folders)
